server-tools/phpmyadmin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  ports:
  - name: phpmyadmin
    port: 80
  selector:
    app: phpmyadmin
