server-tools/phpmyadmin/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  rules:
  - host: phpmyadmin.lh
    http:
      paths:
      - backend:
          serviceName: phpmyadmin
          servicePort: 80
